# interp-refusal-tokens

./: .gitignore  CITATION.bib  CITATION.cff  Example Prompts.docx  Interpreting Refusal Evaluation Results.xlsx  Interpretting Refusal Evaluation Results.xlsx  LICENSE  README.md  Rishab_Alagharu_Learning_Attribution_Patching.ipynb  coconot_contrast_test_outputs_binary-refusal.jsonl  coconot_orig_test_outputs_binary-refusal.jsonl  eval_refusal_judge_azure.py  main.py  pyproject.toml  refusal-tokens.ipynb  refusal_tokens OLD.ipynb  refusal_tokens copy.ipynb  refusal_tokens.ipynb  refusal_tokens_judge_fix.ipynb  refusal_tokens_v1_neurips_mech_interp.ipynb  refusal_tradeoff_plot.py  requirements.txt  wildguard_test_outputs_binary-refusal.jsonl
OLD_refactored_scripts/: refactor.md
Reference Notebooks/: Identifying a Refusal Direction - _Refusal in Language Models Is Mediated by a Single Direction_.ipynb  LLaMA Hooked Transformer with TransformerLens.ipynb  Rishab Alagharu - Learning Attribution Patching.ipynb
References/: LLaMA Hooked Transformer with TransformerLens.ipynb
V1_OLD/: refusal_tokens_v1_neurips_mech_interp.ipynb
models/: steering_probe_18_epoch_15.pt
refusal/: activations.py  plots.py
saved_outputs/: coconot_contrast_test_outputs_categorical-refusal.jsonl  coconot_orig_test_outputs_categorical-refusal.jsonl  coconot_orig_test_outputs_categorical-refusal_categorically_steered_activations.jsonl
saved_tensors/: resid_stream_hooked_activations_9_post.pt  resid_stream_hooked_activations_9_post_llama.pt  resid_stream_steering_vectors_9_post.pt  (+1 more)
(+150 files in other folders)
